--- a/vistas/contacto/style.css
+++ b/vistas/contacto/style.css
@@ -1,30 +1,32 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Proza+Libre&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
 }
 
-body{
+body {
   font-family: 'Open Sans', sans-serif;
   font-family: 'Proza Libre', sans-serif;
-  
+
 }
 
-h2{
+h2 {
   color: #7f888f;
-  font-size: 16px;
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: .8em;
 }
 
-section{
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40px;  
-  font-size: 20px; 
-  padding: 0px 10px;
+main {
+  width: 100%;
+  margin: 3em 0 5em;
+}
+
+section {
+  width: 100%;
+  font-size: 20px;
 }
 
 nav {
@@ -32,7 +34,7 @@ nav {
   overflow: hidden;
   width: 100%;
 }
-  
+
 nav a {
   float: left;
   display: block;
@@ -42,30 +44,21 @@ nav a {
   text-decoration: none;
   font-size: 17px;
 }
-  
+
 nav a:hover {
   background-color: #ddd;
   color: black;
 }
-  
+
 nav a.active {
   background-color: #4CAF50;
   color: white;
 }
 
-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-}
-
 /*formulario*/
-input[type=text], select, textarea {
+input[type=text],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -93,32 +86,17 @@ form {
   border-radius: 5px;
   background-color: #ccc8c8;
   padding: 20px;
+  width: 75%;
+  margin: 0 auto;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
-}
-
-/*Boton*/
-button {
-  border: none; 
-  border-radius: 4px;
-  color: white; 
-  padding: 14px 28px; 
-  cursor: pointer; 
-}
-
-button {background-color: #4CAF50;} /* Green */
-button:hover {background-color: #46a049;}
-
-/*Video de Youtube*/
-iframe{
-  border-radius: 4px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-article{
+  background-color: red;
+  color: white;
   text-align: center;
-}
-
-p{
-  margin-bottom: 20px ;
+  padding: 14px 16px;
 }
